data/derived/comb/progs/unify/prog1127.ml.out
Characters 70-73:
  let fixpoint (f,b) = wwhile((let g x = let xx = f x in (xx, xx!=b) in g b), b);;
                                                                        ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
